you read about tree and how to make an iterator for it

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,8 @@
         "tuple": "cpp",
         "typeinfo": "cpp",
         "utility": "cpp",
-        "deque": "cpp"
+        "deque": "cpp",
+        "map": "cpp",
+        "__tree": "cpp"
     }
 }
