--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,68 +1,50 @@
 {
     "files.associations": {
-        "type_traits": "cpp",
-        "__string": "cpp",
+        "array": "cpp",
+        "deque": "cpp",
         "list": "cpp",
         "string": "cpp",
         "vector": "cpp",
-        "__split_buffer": "cpp",
-        "algorithm": "cpp",
-        "array": "cpp",
-        "locale": "cpp",
         "string_view": "cpp",
-        "iterator": "cpp",
-        "__bit_reference": "cpp",
-        "__hash_table": "cpp",
-        "memory": "cpp",
-        "unordered_map": "cpp",
-        "bitset": "cpp",
-        "initializer_list": "cpp",
-        "__config": "cpp",
-        "__debug": "cpp",
-        "__errc": "cpp",
-        "__functional_base": "cpp",
-        "__locale": "cpp",
-        "__mutex_base": "cpp",
-        "__node_handle": "cpp",
-        "__nullptr": "cpp",
-        "__threading_support": "cpp",
-        "__tuple": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
+        "*.tcc": "cpp",
         "cctype": "cpp",
-        "chrono": "cpp",
+        "clocale": "cpp",
         "cmath": "cpp",
-        "complex": "cpp",
         "cstdarg": "cpp",
         "cstddef": "cpp",
         "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
-        "cstring": "cpp",
-        "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
+        "map": "cpp",
+        "unordered_map": "cpp",
         "exception": "cpp",
+        "algorithm": "cpp",
         "functional": "cpp",
-        "ios": "cpp",
+        "iterator": "cpp",
+        "memory": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
+        "optional": "cpp",
+        "random": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
+        "fstream": "cpp",
+        "initializer_list": "cpp",
         "iosfwd": "cpp",
         "iostream": "cpp",
         "istream": "cpp",
         "limits": "cpp",
-        "mutex": "cpp",
         "new": "cpp",
-        "optional": "cpp",
         "ostream": "cpp",
-        "ratio": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "typeinfo": "cpp",
-        "utility": "cpp",
-        "deque": "cpp",
-        "map": "cpp",
-        "__tree": "cpp"
+        "typeinfo": "cpp"
     }
 }
