--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
         "utility": "cpp",
         "fstream": "cpp",
         "iomanip": "cpp",
-        "memory_resource": "cpp"
+        "memory_resource": "cpp",
+        "__memory": "cpp"
     }
 }
