--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "map": "cpp",
-        "__tree": "cpp"
+        "__tree": "cpp",
+        "__node_handle": "cpp"
     }
 }
