Vector Tests Finished

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,29 @@
 {
     "files.associations": {
-        "exception": "cpp"
+        "exception": "cpp",
+        "memory_resource": "cpp",
+        "memory": "cpp",
+        "__bit_reference": "cpp",
+        "__hash_table": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp",
+        "array": "cpp",
+        "bitset": "cpp",
+        "deque": "cpp",
+        "initializer_list": "cpp",
+        "iterator": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "functional": "cpp",
+        "queue": "cpp",
+        "stack": "cpp",
+        "utility": "cpp",
+        "chrono": "cpp",
+        "ostream": "cpp"
     }
 }
